cmake_minimum_required(VERSION 3.6)
project(Nest)
set(CMAKE_C_STANDARD 11)
set(SOURCE_FILES main.c)
set(SDL2_PATH "C:\\SDL2\\x86_64-w64-mingw32")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${Nest_SOURCE_DIR}/cmake")
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})
add_executable(Nest ${SOURCE_FILES})
target_link_libraries(Nest ${SDL2_LIBRARY})
